<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seaGreen"
    tools:context=".AddPill">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/adding_pills"
            android:textSize="32sp"
            android:gravity="center"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/pill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/editPill"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_name_of_pill"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/editQuantity"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_quantity"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/InputDate" />

                <Button
                    android:id="@+id/initDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/init_date" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/addPillButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/add"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>