<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seaGreen"
    tools:context=".ChangeAppName">

    <TableLayout
        android:layout_width="370dp"
        android:layout_height="700dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/change_app_name"
            android:layout_margin="10dp"
            android:textSize="32sp"
            android:gravity="center"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"/>

        <TableRow>
            <TextView
                android:layout_weight="1"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/editAppName"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_new_name_app"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/changeNameButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/change"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>