<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seaGreen"
    tools:context=".AboutApp">

    <LinearLayout
    android:layout_width="370dp"
    android:layout_height="700dp"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="18dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/pills" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/pills_service"
            android:textSize="32sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            />
        <Button
            android:id="@+id/changeAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/change_name_of_app"
            />
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>