<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seaGreen"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>
                <Button
                    android:id="@+id/aboutAppButton"
                    android:layout_width="145dp"
                    android:layout_height="145dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/about_app"/>

                <Button
                    android:id="@+id/pillAddButton"
                    android:layout_width="145dp"
                    android:layout_height="145dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/add_pill" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/aboutAuthorButton"
                    android:layout_width="145dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/about_author"/>

            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>