<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seaGreen"
    tools:context=".AboutAuthor">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="250dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkSeaGreen"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_margin="10dp"
        android:textSize="32sp"
        android:gravity="center"
        android:text="@string/studentName"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkSeaGreen"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_margin="10dp"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/studentSurname"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkSeaGreen"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_margin="10dp"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/studentGrup"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkSeaGreen"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>